# sbpf-zkvm

./: Cargo.toml
.beads/: issues.jsonl
.claude/: settings.local.json
bpf-tracer/: Cargo.toml
bpf-tracer/src/: lib.rs  trace.rs  vm.rs
prover/: Cargo.toml
prover/src/: keygen.rs  lib.rs  witness.rs
zk-circuits/src/: chips.rs  counter.rs
zk-circuits/src/chips/: alu64_add_imm.rs  alu64_add_reg.rs  exit.rs  memory.rs
