[workspace]
members = [
    "bpf-tracer",
    "zk-circuits",
    "prover",
]
# Excluded: counter-program (BPF target only, built separately)
exclude = [
    "examples/counter-program",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Solana BPF zkVM Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sbpf-zkvm"

[workspace.dependencies]
# Solana BPF VM (from submodule)
solana-sbpf = { path = "deps/sbpf" }

# Solana modular crates for account structures
solana-account = "3.2.0"
solana-pubkey = { version = "4.0.0", features = ["serde"] }

# Halo2 ZK library (Axiom fork from submodule)
halo2-base = { path = "deps/halo2-lib/halo2-base", features = ["halo2-axiom", "display"] }
halo2-ecc = { path = "deps/halo2-lib/halo2-ecc", features = ["halo2-axiom"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

# BPF target profile for the counter program
[profile.bpf]
inherits = "release"
opt-level = 3
lto = true
