[package]
name = "bpf-tracer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
solana-sbpf = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
