[package]
name = "prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bpf-tracer = { path = "../bpf-tracer" }
zk-circuits = { path = "../zk-circuits" }
halo2-base = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
